fixed toList() calls.